--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -108,6 +108,7 @@ button:focus {
   /* Handle on hover */
   // &::-webkit-scrollbar-thumb:hover {
   // }
+  margin-left: 10px;
 }
 
 // react toastify
