--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -108,7 +108,8 @@ button:focus {
   /* Handle on hover */
   // &::-webkit-scrollbar-thumb:hover {
   // }
-  margin-left: 33px;
+  // margin-left: 33px;
+  margin-left: 26px;
 }
 
 // react toastify
